# RLM-CLAUDE-CODE-DESIGNER

./: .gitignore  BENCHMARKS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude Code Plugins and Models.txt  GITHUB_CHECKLIST.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RLM_ENTERPRISE_WIKI.md  TASKS.md  USAGE_EXAMPLES.md  pdf_extractor.py  pyproject.toml  requirements.txt  rlm_document_ingestion.py  test_pdf_rlm.py  test_report.md
.github/workflows/: ci.yml
extracted_content/: Claude Code RLM Implementation Research_extracted.json  Claude Code RLM Implementation Research_pdfplumber.json  Claude Code RLM Implementation Research_pdfplumber.txt  Claude Code RLM Implementation Research_pymupdf.json  Claude Code RLM Implementation Research_pymupdf.txt  Claude Code RLM Implementation Research_pypdf.json  Claude Code RLM Implementation Research_pypdf.txt
rlm_lib/: __init__.py  aggregator.py  chunker.py  coherence_validator.py  component_spec_parser.py  confidence_scorer.py  config.py  context_cache.py  delegator.py  design_os_adapter.py  effort_control.py  indexer.py  kernel.py  kernel_enterprise.py  knowledge_graph.py  pixel_perfect_validator.py  quality_gate.py  review_orchestrator.py  semantic_chunker.py  tool_search.py
tests/: __init__.py  test_benchmarks.py  test_chunker.py  test_config.py  test_context_cache.py  test_design_os.py  test_effort_control.py  test_integration.py  test_kernel.py  test_kernel_enterprise.py  test_knowledge_graph.py  test_phase5.py  test_quality_gate.py  test_semantic_chunker.py  test_tool_search.py  test_validators.py
wiki/: API-Reference.md  Architecture.md  Core-Modules.md  Design-OS-Integration.md  Home.md  Mode-Management.md  Plugin-Architecture.md  Quality-Assurance.md  _Footer.md  _Sidebar.md
(+11 files in other folders)
