[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-claude-code-designer"
version = "1.0.0"
description = "Enterprise-scale Recursive Language Model architecture for massive context management"
readme = "README.md"
authors = [
  { name = "Verridian AI", email = "contact@verridian.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "claude", "rlm", "context-management", "enterprise"]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/Verridian-ai/RLM-CLAUDE-CODE-DESIGNER"
"Bug Tracker" = "https://github.com/Verridian-ai/RLM-CLAUDE-CODE-DESIGNER/issues"
"Documentation" = "https://github.com/Verridian-ai/RLM-CLAUDE-CODE-DESIGNER/wiki"

[tool.setuptools]
packages = ["rlm_lib"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
